--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.1.1
   shared_preferences: ^2.3.2
   image_picker: ^1.1.2
+  flutter_html: ^3.0.0
 
 dev_dependencies:
   flutter_test:
