--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_html: ^3.0.0
   url_launcher: ^6.3.2
+  syncfusion_flutter_calendar: ^25.2.7
 
 dev_dependencies:
   flutter_test:
